[package]
name = "titanfront"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP is generally easier with an async runtime
# Because most of the game forwarding is done in threads a lightweight one is used
async-std = {version = "1.11.0", features = ["attributes"]}
async-macros = "2.0.0"
dashmap = "5.0.0"
# HTTP server
tide = "0.16.0"
# HTTP client
surf = "2.3.2"
base64 = "0.13.0"
config = "0.11.0"
# Used to decrypt game packets
rust-crypto = "0.2.36"
# Used for clock()
libc = "0.2.117"
env_logger = "0.9.0"
log = "0.4.14"
# Used by tide and suf for URL encoding
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
