[package]
name = "titanfront"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP is generally easier with an async runtime
# Because most of the game forwarding is done in threads a lightweight one is used
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "tracing", "parking_lot", "time"] }
dashmap = "5.1.0"
# HTTP server
actix-web = "4.2.1"
# HTTP client
surf = "2.3.2"
base64 = "0.13.0"
config = "0.11.0"
# Used to decrypt game packets
# By default this crate will use software implementations of both AES and the
# POLYVAL universal hash function. When targeting modern x86/x86_64 CPUs, use
# the following RUSTFLAGS to take advantage of high performance AES-NI and CLMUL
# CPU intrinsics:
# RUSTFLAGS="-Ctarget-cpu=sandybridge -Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"
aes-gcm = "0.10.1"
generic-array = "0.14.6"
# Used for clock()
libc = "0.2.117"
env_logger = "0.9.0"
log = "0.4.14"
# Used by tide and suf for URL encoding
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"

[build]
rustflags = ["--cfg", "tokio_unstable", "-Ctarget-cpu=sandybridge", "-Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"]